--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-A program to migrate a DB in a manner that will allow full uptime.
+A program to migrate a database in a manner that
+supports zero down time deployments.
 
