README now includes a point about safety

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-A DB migration program focused on supporting zero down time deployments.
+A DB migration program focused on safety
+and supporting zero down time deployments.
 
