--- a/README
+++ b/README
@@ -1,6 +1,26 @@
 A DB migration program focused on safety
 and supporting zero down time deployments.
 
+
+== USAGE ==
+pygrate <operation> <release>
+
+<operation> is one of:
+* add
+* hide
+* drop
+* rollback_add
+* rollback_hide
+
+<release> references the group of files to execute
+
+
+== Pygrations ==
+each database change is implemented in a subclass of the Pygration class.
+the pygration subclass has a method for each operation.  that method will
+get called by pygrate when it's run.
+
+
 == GOALS ==
 Deploy DB changes separated into phases:
 * add new schema elements
