--- a/README
+++ b/README
@@ -2,6 +2,18 @@ A DB migration program focused on safety
 and supporting zero down time deployments.
 
 
+== GOALS ==
+Deploy DB changes separated into phases:
+* add new schema elements
+* (not pygrate): deploy new application code
+* hide old schema elements to simulate dropping
+* permanently drop old schema elements
+
+Easily rollback added and hidden elements
+
+Segregate DB changes by "release", to limit how much can be rolled back
+
+
 == USAGE ==
 pygrate <operation> <release>
 
@@ -21,18 +33,7 @@ the pygration subclass has a method for each operation.  that method will
 get called by pygrate when it's run.
 
 
-== GOALS ==
-Deploy DB changes separated into phases:
-* add new schema elements
-* (not pygrate): deploy new application code
-* hide old schema elements to simulate dropping
-* permanently drop old schema elements
-
-Easily rollback added and hidden elements
-
-Segregate DB changes by "release", to limit how far a rollback can go
-
-Support various types of migrations:
+== SUPPORTED DB OPERATIONS ==
 * add/drop table
 * add/drop column
 * add/drop stored procedure
