new sample pygration.  also added it to the README
readme should better describe what users need to do to migrate a
database for zero downtime deployment.

--- a/README
+++ b/README
@@ -34,6 +34,22 @@ Pygration class.  the pygration subclass has a method for each of the
 high level operations listed above.  that method will
 get called by pygrate when it's run.
 
+Sample Pygration:
+class RenameUserIDColumn(pygrate.Pygration):
+    """Rename the userid column to be username."""
+    def add(self,db):
+        """Add the username column and copy userid values to it."""
+        db.add_column( "user", String( "username") )
+        db.execute_sql( "update user set username=userid;" )
+
+    def hide(self,db):
+        """Hide the userid column before completely dropping it."""
+        db.hide_column( "user.userid" )
+
+    def drop(self,db):
+        """Permanently drop the userid column."""
+        db.drop_column( "user.userid" )
+
 
 == SUPPORTED DB OPERATIONS ==
 * add/drop table
