--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,11 @@
-= v0.x.0 =
+v0.x.0
 * More error checking to avoid migrations out of order
 
 v0.2.0
 * Changed phases to add, simdrop and drop
 * Add better tests to solidify behavior and error cases
 
-= v0.1.0 =
-Initial version
-Works for deploying changes but isn't great
+v0.1.0
+* Initial version
+* Works for deploying changes but isn't great
 
