--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+v0.x.0
+* Now support environment specific config files
+* Enable execution of SQL from files with db.shell command
+* Register step classes with decorator instead of subclass
+* Allow instances of step classes instead of just classes
+
 v0.2.1
 * More error checking to avoid migrations out of order
 * Fail on rollback drop b/c it cannot be dropped
