--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ v0.x.0
 * Enable execution of SQL from files with db.shell command
 * Register step classes with decorator instead of subclass
 * Allow instances of step classes instead of just classes
+* New fast-forward command (ff)
 
 v0.2.1
 * More error checking to avoid migrations out of order
